[package]
name = "example_app"
version.workspace = true
edition.workspace = true

[dependencies]
rejoice = { path = "../rejoice" }
tokio = { version = "1.46.0", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
maud = { version = "0.27", features = ["axum"] }

[build-dependencies]
rejoice = { path = "../rejoice" }
