[package]
name = "rejoice"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenvy_macro = "0.15.7"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
] }
tokio = { version = "1.46.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors"] }
