[package]
name = "rejoice"
version.workspace = true
edition.workspace = true
description = "A simple and delightful little web framework for Rust"
license = "MIT"
repository = "https://github.com/kiahjh/rejoice"
keywords = ["web", "framework", "routing", "axum"]
categories = ["web-programming::http-server"]

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
dotenvy_macro = "0.15.7"
futures = "0.3"
html-escape = "0.2"
maud = { version = "0.27", features = ["axum"] }
notify = { version = "8.2.0", features = ["macos_fsevent"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
] }
tokio = { version = "1.46.0", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }

[[bin]]
name = "rejoice"
path = "src/bin/main.rs"
